--- a/RGR_Literature/compose.yaml
+++ b/RGR_Literature/compose.yaml
@@ -14,7 +14,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d music"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d literarure"]
       interval: 10s
       timeout: 5s
       retries: 5
